update send-letter getLetterStatus endpoint in integration test