@@ -321,9 +321,9 @@ public class HearingNonFastTrackDocumentTest extends BaseTest {
     void generateConfirmLetterCreatedStub(UUID uuid) throws IOException {
         LetterStatus letterStatus = new LetterStatus(uuid, "Created", "checksum",
             ZonedDateTime.now(), ZonedDateTime.now().plusHours(1),
-            ZonedDateTime.now().plusHours(2), Collections.emptyMap(), 1);
+            ZonedDateTime.now().plusHours(2), Collections.emptyMap(), Map.of("Document_1", 1));
 
-        sendLetterService.stubFor(get(urlPathEqualTo(SEND_LETTER_CONTEXT_PATH + "/" + uuid))
+        sendLetterService.stubFor(get(urlPathEqualTo(SEND_LETTER_CONTEXT_PATH + "/v2/" + uuid))
             .willReturn(aResponse()
                 .withStatus(HttpStatus.OK.value())
                 .withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
